Added thousandth seperator for money value fields

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-amendment/dfa-project-amendment.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-amendment/dfa-project-amendment.component.html
@@ -269,7 +269,7 @@
                       id="currencyBoxestimatedAdditionalProjectCost"
                       formControlName="estimatedAdditionalProjectCost"
                       matInput
-                      mask="separator.2" thousandSeparator="" decimalMarker="."
+                      mask="separator.2" thousandSeparator="," decimalMarker="."
                       maxlength="100"/>
                     <span class="currencyText">CA$</span>
                   </div>
@@ -300,7 +300,7 @@
                         id="currencyBoxapprovedAdditionalProjectCost"
                         formControlName="approvedAdditionalProjectCost"
                         matInput
-                        mask="separator.2" thousandSeparator="" decimalMarker="."
+                        mask="separator.2" thousandSeparator="," decimalMarker="."
                         maxlength="100"/>
                       <span class="currencyText">CA$</span>
                     </div>
